crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__bleats.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                        6 in the flock
 ██ api  out /home/ada/.shep/logs/api-2-out.log  err /home/ada/.shep/logs/api-2-err.log  64.0K wind…
 stream out   level ≥ warn   match /retry|jitter/ (regex)  1 of 16 lines in the window: all three m…
out  WARN retrying upstream payment gateway after a timeout, backing off 500ms before trying again w
     ith jitter added so the whole fleet does not retry at once                                     
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
esc back   j/k line   ctrl-d/u page   G end   / search   n/N match   f follow   w wrap … █ following
